# pimpl

./: CMakeLists.txt  README.md  a.cpp  a.h  b.cpp  b.h  test.cpp
.github/workflows/: cmake-multi-platform.yml
include/: pimpl.h
